--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Welcome to NeuroImagingWorld tutorial section
+description: Collection of Hands on guides to help get started with Neuro imaging analysis
